# 04-Colas

./: .travis.yml  CMakeLists.txt
Cola/: Cola.h  Nodo.h
Ej-01/: main.cpp  sonIguales.cpp  sonIguales.h
Ej-02/: Pila.cpp  Pila.h  esPalidromo.cpp  esPalidromo.h  main.cpp
test/: CMakeLists.txt  Colas-test.cpp  Ej-01-test.cpp  Ej-02-test.cpp  Ej-03-test.cpp  Ej-04-test.cpp  Ej-05-test.cpp
